Build Dockerfile from scratch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,72 @@ version: '3'
 
 services:
   namenode:
-    build: .
+    image: hadoop-spark-base:latest
     container_name: namenode
     hostname: namenode
     ports:
-      - "9870:9870"
-      - "9000:9000"
-      - "8088:8088"
+      - "9870:9870"  # Hadoop NameNode web UI
+      - "8088:8088"  # YARN ResourceManager web UI
+      - "7077:7077"  # Spark Master port
+      - "8080:8080"  # Spark Master web UI
+      - "2222:22"    # SSH
     volumes:
-      - hadoop_namenode:/hadoop/dfs/name
+      - ./hadoop_namenode:/hadoop/dfs/name
+      - ./hadoop_config:/opt/hadoop_config
+      - ./spark_config:/opt/spark_config
     environment:
-      - CLUSTER_NAME=test
-    env_file:
-      - ./hadoop-hive.env
+      - NODE_TYPE=namenode
+      - HDFS_NAMENODE_USER=hdfs
+      - YARN_RESOURCEMANAGER_USER=yarn
+      - YARN_NODEMANAGER_USER=yarn
+    networks:
+      hadoop_network:
+        aliases:
+          - namenode
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9870" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   datanode1:
-    build: .
+    image: hadoop-spark-base:latest
     container_name: datanode1
     hostname: datanode1
     volumes:
-      - hadoop_datanode1:/hadoop/dfs/data
+      - ./hadoop_datanode1:/hadoop/dfs/data
+      - ./hadoop_config:/opt/hadoop_config
+      - ./spark_config:/opt/spark_config
     environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-    env_file:
-      - ./hadoop-hive.env
+      - NODE_TYPE=datanode
+      - HDFS_DATANODE_USER=hdfs
+    networks:
+      hadoop_network:
+        aliases:
+          - datanode1
+    depends_on:
+      namenode:
+        condition: service_healthy
 
   datanode2:
-    build: .
+    image: hadoop-spark-base:latest
     container_name: datanode2
     hostname: datanode2
     volumes:
-      - hadoop_datanode2:/hadoop/dfs/data
+      - ./hadoop_datanode2:/hadoop/dfs/data
+      - ./hadoop_config:/opt/hadoop_config
+      - ./spark_config:/opt/spark_config
     environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-    env_file:
-      - ./hadoop-hive.env
-
-volumes:
-  hadoop_namenode:
-  hadoop_datanode1:
-  hadoop_datanode2:
+      - NODE_TYPE=datanode
+      - HDFS_DATANODE_USER=hdfs
+    networks:
+      hadoop_network:
+        aliases:
+          - datanode2
+    depends_on:
+      namenode:
+        condition: service_healthy
 
 networks:
-  default:
+  hadoop_network:
     name: hadoop_network
